@startuml
circle main

class File {
-inFile_ : fstream;
-outFile_ : fstream;
-inFileName_ : string;
-outFileName_ : string;
+OpenFile(string, string) : bool;
+ReadLine(void) : string ;
+WriteLine(string) : void ; 
+CloseFile(void) : void ;
+IsValidFiles(void) : bool ;
+IsExistedFile(string) : bool ;
}

class Parser {
-employeemanager : EmployeeManager;
+request_management(const vector<string>) : string
+request_del(const vector<string>) : string
+request_search(const vector<string>) : string
+request_mod(const vector<string>) : string
+make_return_str(const map<int, Employee>, string, bool) : string
+parse(const string) : string
+request_add(const vector<string>) : void
}

class EmployeeManager {
-m_Employees : map<int, Employee>
-m_Results : map<int, Employee>
-m_SearcherFactory : IFactorySearcher*
-m_ExecutorFactory : IFactoryExecutor*
+search(Option*) : map<int, Employee>*
+execute(const map<int, Employee>*, Option*) : void
}

entity Employee {
+EmpNo : string
+Name : string
+Career_level : string
+Phone_number : string
+BirthDay : string
+Certi : string
{static} int makeKeyValueFromString(const string&)
}


enum OPTION1 {
NONE = 0
P
}

enum OPTION2 {
NONE = 0,
FIRST_NAME,
LAST_NAME,
MID_NUMBER,
LAST_NUMBER,
YEAR, 
MONTH, 
DAY,
}

enum COMMAND {
ADD = 0,
DEL,
SCH,
MOD,
}

enum COLUMN {
NONE = 0,
EMPLOYEENUM,
NAME,
CL,
PHONENUM,
BIRTHDAY,
CERTI,
}

class Option {
-cmd_ : COMMAND
-op1_ : OPTION1
-op2_ : OPTION2
+{static}stringTokenize(vector<string>&, const string&, const char) : void
+fillOption1(string) : void
+getStringFromOptionCommand(void) : string
}

class AddOption {
-employee_ : Employee
+AddOption(Employee&) : void
+fillOption2(string) override : void
+getEmployee(void) : Employee*
}

interface ISchOption {
+fillOption2(string) : void
}

class SchOption {
+SchOption(string, string, string) : void
}

class ModOption {
-changeData_ : string
+ModOption(string, string, string, string, string) : void
+fillChangeData(string) : void
+getChangeColumn(void) : COLUMN
+getChangeData(void) : string
}

class DelOption {
+DelOption(string, string, string) : void
}

AddOption --|> Option
ISchOption --|> Option
SchOption --|> ISchOption
ModOption --|> ISchOption
DelOption --|> ISchOption


interface IFactorySearcher {
+{abstract}~IFactorySearcher()
+{abstract}getConcreteSearcher(const Option& option) const : Searcher*
}

class FactorySearcher {
-pEmpNumSearcher_ : Searcher*
-pNameSearcher_ : Searcher*
-pClSearcher_ : Searcher*
-pPhoneNumberSearcher_ : Searcher*
-pBirthdaySearcher_ : Searcher*
-pCertiSearcher_ : Searcher*
+{abstract}getConcreteSearcher(const Option& option) const : Searcher*
}

IFactorySearcher <|-- FactorySearcher

abstract class Searcher {
#pEmployees_ : map<int, Employee>*
#pResults : map<int, Employee>*
+Searcher(map<int, Employee>*, map<int, Employee>*)
+{abstract}~Searcher()
+{abstract}search(const Option& option) const : map<int, Employee>*
}

class EmployeeNumSearcher {
+search(Option* option) const : map<int, Employee>*
}

class NameSearcher {
+search(Option* option) const : map<int, Employee>*
}

class ClSearcher {
+search(Option* option) const : map<int, Employee>*
}

class PhoneNumberSearcher {
+search(Option* option) const : map<int, Employee>*
}

class BirthdaySearcher {
+search(Option* option) const : map<int, Employee>*
}

class CertiSearcher {
+search(Option* option) const : map<int, Employee>*
}

EmployeeNumSearcher --|> Searcher
NameSearcher --|> Searcher
ClSearcher --|> Searcher
PhoneNumberSearcher --|> Searcher
BirthdaySearcher --|> Searcher
CertiSearcher --|> Searcher

FactorySearcher .left.> EmployeeNumSearcher : <<use>>
FactorySearcher .left.> NameSearcher : <<use>>
FactorySearcher .right.> ClSearcher : <<use>>
FactorySearcher .right.> PhoneNumberSearcher : <<use>>
FactorySearcher .down.> BirthdaySearcher : <<use>>
FactorySearcher .down.> CertiSearcher : <<use>>

interface IFactoryExecutor {
+{abstract}~IFactoryExecutor()
+{abstract}getConcreteExecutor(Option* option) : Executor*
}

class FactoryExecutor {
+m_pAddExecutor_ : Executor*
+m_pDelExecutor_ : Executor*
+m_pModExecutor_ : Executor*
+getConcreteExecutor(Option* option) : Executor*
}

IFactoryExecutor <|-- FactoryExecutor

abstract class Executor {
#pEmployees_ : map<int, Employee>*
+{abstract}Executor(map<int, Employee>*) 
+{abstract}~Executor()
+{abstract}execute(const map<int, Employee>*, Option*) : void
}

class AddExecutor {
+AddExecutor(map<int, Employee>*)
+execute(const map<int, Employee>*, Option*) : void
}

class DeleteExecutor {
+DeleteExecutor(map<int, Employee>*)
+execute(const map<int, Employee>*, Option*) : void
}

class ModifyExecutor {
+ModifyExecutor(map<int, Employee>*)
+execute(const map<int, Employee>*, Option*) : void
}

AddExecutor --|> Executor
DeleteExecutor --|> Executor
ModifyExecutor --|> Executor

FactoryExecutor .left.> AddExecutor : <<use>>
FactoryExecutor .right.> DeleteExecutor : <<use>>
FactoryExecutor .down.> ModifyExecutor: <<use>>

main ..> File : <<use>>
main ..> Parser : <<use>>

Option "1"..>"1" OPTION1
Option "1"..>"1" OPTION2 
Option "1"..>"1" COMMAND 
AddOption "1"..>"0..1" Employee
Option "1"..>"2" COLUMN

Parser ..> EmployeeManager : <<use>>
Parser ..> Employee : <<use>>
Option <.. Parser : <<use>>
Option <.. EmployeeManager : <<use>>
EmployeeManager ..> IFactorySearcher : <<use>>
EmployeeManager ..> IFactoryExecutor : <<use>>
Employee --o EmployeeManager

@enduml